Update all relevant filters to use correct method